[project]
name = "gradelog"
version = "0.1.0"
description = "Telegram бот для ведения журнала оценок с автоматическим расчетом возможных итоговых оценок"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiogram>=3.22.0",
    "aiosqlite>=0.21.0",
    "alembic>=1.16.5",
    "pydantic-settings>=2.10.1",
    "sqlalchemy>=2.0.43",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
]
